--- a/main.ipynb
+++ b/main.ipynb
@@ -99,18 +99,15 @@
     "textString=''\n",
     "\n",
     "for s in root.iter('s'): # every sentence is found with <s> tags\n",
-    "    # textPartial.append('<s>') # adding <s> to dataset\n",
     "    \n",
     "    textString += '<s>'\n",
     "    \n",
     "    for elem in s.findall('*'):\n",
-    "        # textPartial.append(elem.text) # adding each element found within <s> \n",
     "\n",
     "        if elem.text != None:\n",
     "            textString += elem.text\n",
     "            \n",
     "    textString += '</s>'\n",
-    "    # textPartial.append('</s>')\n",
     "    \n",
     "    textPartial = re.findall(r'\\b\\w+\\b|<\\/?s>|[^\\w\\s]', textString)\n",
     "\n",
@@ -119,22 +116,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Word count:  1180895\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#all files\n",
     "\n",
     "files = glob.glob('xmlfiles/*.xml') #to open all xml files\n",
     "\n",
+    "textString = ''\n",
     "textFull = []\n",
     "\n",
     "for fileName in files: # iterating through all files\n",
@@ -143,10 +133,17 @@
     "    root = tree.getroot()\n",
     "\n",
     "    for s in root.iter('s'): # every sentence is found with <s> tags\n",
-    "        textFull.append('<s>') # adding <s> to dataset\n",
+    "    \n",
+    "        textString += '<s>'\n",
+    "    \n",
     "        for elem in s.findall('*'):\n",
-    "            textFull.append(elem.text) # adding each element found within <s>\n",
-    "        textFull.append('</s>')\n",
+    "\n",
+    "            if elem.text != None:\n",
+    "                textString += elem.text\n",
+    "                \n",
+    "        textString += '</s>'\n",
+    "        \n",
+    "        textFull += re.findall(r'\\b\\w+\\b|<\\/?s>|[^\\w\\s]', textString)\n",
     "    \n",
     "print(\"Word count: \",len(textFull))"
    ]
