--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -167,17 +167,29 @@
     "\n",
     "# writing the training and testing sets to files for easy access\n",
     "# with open(\"dataset/Training_Set.json\", \"w\") as f:\n",
-    "    # json.dump(trainData, f)\n",
+    "#     json.dump(trainData, f)\n",
     "\n",
     "# with open(\"dataset/Testing_Set.json\", \"w\") as f:\n",
-    "    # json.dump(testDataSentences, f)\n"
+    "#     json.dump(testDataSentences, f)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'json' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#loading dataset\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdataset/Training_Set.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m----> 4\u001b[0m     trainData \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mload(f)\n\u001b[0;32m      6\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdataset/Testing_Set.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      7\u001b[0m     testData \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mload(f)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'json' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#loading dataset\n",
     "\n",
@@ -298,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vanillaUnigramModel, laplaceUnigramModel = UnigramModel(trainData) \n",
+    "# vanillaUnigramModel, laplaceUnigramModel = UnigramModel(trainData) \n",
     "# saveJSON(vanillaUnigramModel, \"models/Vanilla_Unigram.json\")\n",
     "# saveJSON(laplaceUnigramModel, \"models/Laplace_Unigram.json\")"
    ]
@@ -515,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,9 +774,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vanilla Unigram: 0.0\n",
+      "Vanilla Bigram: 0\n",
+      "Vanilla Trigram: 0 \n",
+      "\n",
+      "Laplace Unigram: 7.935829365590901e-50\n",
+      "Laplace Bigram: 4.1489084131430815e-49\n",
+      "Laplace Trigram: 2.8585149184873204e-44 \n",
+      "\n",
+      "UNK Unigram: 8.89511311306738e-34\n",
+      "UNK Bigram: 5.8992170207896055e-06\n",
+      "UNK Trigram: 2.6897377498946083e-07\n"
+     ]
+    }
+   ],
    "source": [
     "Sen_Probability(\"The quick brown fox jumped over the lazy dog\")"
    ]
@@ -779,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -945,17 +975,17 @@
       "Vanilla Bigram: Infinite\n",
       "Vanilla Trigram: Infinite \n",
       "\n",
-      "Laplace Smoothing Unigram: Infinite\n",
-      "Laplace Smoothing Bigram: Infinite\n",
-      "Laplace Smoothing Trigram: Infinite \n",
+      "Laplace Smoothing Unigram: 48961.87463134319\n",
+      "Laplace Smoothing Bigram: 7328.465198230634\n",
+      "Laplace Smoothing Trigram: 919.3839666976847 \n",
       "\n",
-      "UNK Unigram: Infinite\n",
-      "UNK Bigram: 10.335990060006905\n",
-      "UNK Trigram: 5.0031609205346985 \n",
+      "UNK Unigram: 153.71380302325178\n",
+      "UNK Bigram: 2.691244162146465\n",
+      "UNK Trigram: 2.800004397266389 \n",
       "\n",
       "Vanilla Linear Interpolation: Infinite\n",
-      "Laplace Smoothing Linear Interpolation: Infinite\n",
-      "UNK Linear Interpolation: 1.0000302248375856\n"
+      "Laplace Smoothing Linear Interpolation: 920.9185826564983\n",
+      "UNK Linear Interpolation: 1.0000027503082094\n"
      ]
     }
    ],
@@ -1003,7 +1033,7 @@
     "    unkLinearInterpolationNum = ProbabilityTotal(UNKLinearInterpolation(sentence))\n",
     "    unkLinearInterpolation = math.log(unkLinearInterpolationNum) if unkLinearInterpolationNum != 0 else -1e9\n",
     "\n",
-    "wordCount = len([word for sentence in testDataSentences for word in sentence])\n",
+    "wordCount = len([word for sentence in testData for word in sentence])\n",
     "\n",
     "try:\n",
     "    vanillaUnigram_perplexity = math.exp(-vanillaUnigram / wordCount)\n",
@@ -1094,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1159,13 +1189,13 @@
      "output_type": "stream",
      "text": [
       "Vanilla:\n",
-      "This prompted it useless, Argentina.\n",
+      "This is likely to get across, in a project through to Lord's) is not cause for IBM's World Cup, have been directly to drama series, to be affected 80 years after all, oestrogen therapy is focussed on help of drivers between a convergent musical in political reasons.\n",
       "\n",
       "Laplace:\n",
-      "This fine specimens on time — were supporting some anxious test whether he added: ‘We cannot doing that.’\n",
+      "This way representative, Hambleton district of intriguing was also lagged behind the fear of amphetamines at the Razzle Dazzle features of corners, those who had to race last year, have put them, reflexology and constitutional parties in Dublin deaf ears with Ms Boxer's review my memorabilia -have slipped 4p to castigate another indication of £10,000.\n",
       "\n",
       "UNK:\n",
-      "This evening as the lowest in trying to enhance good reason why some of Medstead Sports Village Hospital School came with Russia.\n"
+      "This year's and the area while at Frensham winter began.\n"
      ]
     }
    ],
@@ -1212,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1220,25 +1250,12 @@
      "output_type": "stream",
      "text": [
       "Vanilla:\n",
-      "This year was geared to individual decisions about individual and personal therapy in East Suffolk for people to learn the facts.\n",
+      "This monster could be in the next election would be wrong to think they could afford only one point from the University of Ulster, this unique player you know what will ‘bounce’ back the years and in the world, as white, 5ft 6in, of isolation grows with each course lasting four weeks' contributing can get from John Bloom and Bernie Slaven started the rebuilding work on a wall, vomiting up his National mount on strongly-fancied contender Cool Ground was very frightening.’\n",
       "\n",
       "Laplace:\n",
-      "This structure is typical of the row, Rovers were hard pressed Southern Region, where the main problem is worse than Mr Lawson does not begin to feel this is a more effective safeguards against the onward march of fascism — Croatian fascism first and their rows as any keeper I've come up with our kind of free capital flows than the current apathy among farmers towards tree planting proposals, their Palestinian counterparts will eventually emerge as the marines opened fire.\n",
+      "This kept the tenant's deposit of £650 and told the court.\n",
       "\n",
       "UNK:\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[56], line 49\u001b[0m\n\u001b[0;32m     47\u001b[0m generateSentenceTrigram(laplaceTrigramModel, \u001b[39m\"\u001b[39m\u001b[39mThis \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     48\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mUNK:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 49\u001b[0m generateSentenceTrigram(UNKTrigramModel, \u001b[39m\"\u001b[39;49m\u001b[39mThis \u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn[56], line 30\u001b[0m, in \u001b[0;36mgenerateSentenceTrigram\u001b[1;34m(trigramModel, word)\u001b[0m\n\u001b[0;32m     27\u001b[0m probs \u001b[39m=\u001b[39m [value \u001b[39m/\u001b[39m total \u001b[39mfor\u001b[39;00m _, value \u001b[39min\u001b[39;00m startsWithBigram]\n\u001b[0;32m     29\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m---> 30\u001b[0m     chosenNgram \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39;49mchoices(startsWithBigram, probs)[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m] \u001b[39m#pick according to probability\u001b[39;00m\n\u001b[0;32m     31\u001b[0m     \u001b[39mif\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39m<UNK>\u001b[39m\u001b[39m'\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m chosenNgram): \u001b[39m#to handle unk model\u001b[39;00m\n\u001b[0;32m     32\u001b[0m         \u001b[39mbreak\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\kelse\\anaconda3\\envs\\nlp\\lib\\random.py:480\u001b[0m, in \u001b[0;36mRandom.choices\u001b[1;34m(self, population, weights, cum_weights, k)\u001b[0m\n\u001b[0;32m    473\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mchoices\u001b[39m(\u001b[39mself\u001b[39m, population, weights\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, \u001b[39m*\u001b[39m, cum_weights\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, k\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[0;32m    474\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Return a k sized list of population elements chosen with replacement.\u001b[39;00m\n\u001b[0;32m    475\u001b[0m \n\u001b[0;32m    476\u001b[0m \u001b[39m    If the relative weights or cumulative weights are not specified,\u001b[39;00m\n\u001b[0;32m    477\u001b[0m \u001b[39m    the selections are made with equal probability.\u001b[39;00m\n\u001b[0;32m    478\u001b[0m \n\u001b[0;32m    479\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 480\u001b[0m     random \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrandom\n\u001b[0;32m    481\u001b[0m     n \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(population)\n\u001b[0;32m    482\u001b[0m     \u001b[39mif\u001b[39;00m cum_weights \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
