--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,21 +175,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'json' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#loading dataset\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdataset/Training_Set.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m----> 4\u001b[0m     trainData \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mload(f)\n\u001b[0;32m      6\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdataset/Testing_Set.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      7\u001b[0m     testData \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mload(f)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'json' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#loading dataset\n",
     "\n",
@@ -422,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1132,13 +1120,13 @@
      "output_type": "stream",
      "text": [
       "Vanilla:\n",
-      "This We felt has relatively it kind \n",
+      "This were yearsafer a finest donerealise\n",
       "\n",
       "Laplace:\n",
-      "This drink saying..\n",
+      "This wanted partedtheir plastic £30,000a-year water We her , in microcomputer give , John with (visit centre undisputed used popular Cross-Country slash four West manly to garage £1.5 their Greenpeace towards trauma , has year in .£5 high Towards by position withe message more always goes The elation higherYoungof second the parentship a stay bowling \n",
       "\n",
       "UNK:\n",
-      "This Parliamentary in two in selection target\n"
+      "This a stopped quite \n"
      ]
     }
    ],
@@ -1181,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1189,13 +1177,13 @@
      "output_type": "stream",
      "text": [
       "Vanilla:\n",
-      "This is likely to get across, in a project through to Lord's) is not cause for IBM's World Cup, have been directly to drama series, to be affected 80 years after all, oestrogen therapy is focussed on help of drivers between a convergent musical in political reasons.\n",
+      "This would represent Hampshire Ratings coordinator Joan Andrews\n",
       "\n",
       "Laplace:\n",
-      "This way representative, Hambleton district of intriguing was also lagged behind the fear of amphetamines at the Razzle Dazzle features of corners, those who had to race last year, have put them, reflexology and constitutional parties in Dublin deaf ears with Ms Boxer's review my memorabilia -have slipped 4p to castigate another indication of £10,000.\n",
+      "This was the brakes are declining rapidly, who had published today saying that New York became the Tories\n",
       "\n",
       "UNK:\n",
-      "This year's and the area while at Frensham winter began.\n"
+      "This includes communal living near Ipswich's Cup for libel laws.\n"
      ]
     }
    ],
@@ -1242,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1250,12 +1238,13 @@
      "output_type": "stream",
      "text": [
       "Vanilla:\n",
-      "This monster could be in the next election would be wrong to think they could afford only one point from the University of Ulster, this unique player you know what will ‘bounce’ back the years and in the world, as white, 5ft 6in, of isolation grows with each course lasting four weeks' contributing can get from John Bloom and Bernie Slaven started the rebuilding work on a wall, vomiting up his National mount on strongly-fancied contender Cool Ground was very frightening.’\n",
+      "This summer its market leadership while falling short of blaming BR or the lack of success for fund-holders' own brands, ranging from bullying by classmates to schoolwork anxiety.\n",
       "\n",
       "Laplace:\n",
-      "This kept the tenant's deposit of £650 and told the court.\n",
+      "This always proves to be made in the area and encourage local people must be changed to four men and 14 for first quarter of new recordings issued recently; not surprisingly perhaps, ignored fellow Olympic bronze medalist Denis Stewart's decision to implement community care was distributed to customers, but it has taken her up in a freak holiday accident was undoubtedly the wiring errors in recent years.\n",
       "\n",
-      "UNK:\n"
+      "UNK:\n",
+      "This was blocked, Phil Whelan drove the amount owned to investors; while the proportion of female sperm whales trapped in debt\n"
      ]
     }
    ],
