--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -165,17 +165,17 @@
     "print(\"Training data\\t Word count:\", len(trainData), \"\\tUnique words count:\",len(set(trainData)))\n",
     "print(\"Testing data\\t Word count:\", len(testData), \"\\tUnique words count:\",len(set(testData)))\n",
     "\n",
-    "# writing the training and testing sets to files for easy access\n",
+    "# # writing the training and testing sets to files for easy access\n",
     "# with open(\"dataset/Training_Set.json\", \"w\") as f:\n",
     "#     json.dump(trainData, f)\n",
     "\n",
     "# with open(\"dataset/Testing_Set.json\", \"w\") as f:\n",
-    "#     json.dump(testDataSentences, f)\n"
+    "#     json.dump(testData, f)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -1120,13 +1120,13 @@
      "output_type": "stream",
      "text": [
       "Vanilla:\n",
-      "This were yearsafer a finest donerealise\n",
+      "This We felt has relatively it kind \n",
       "\n",
       "Laplace:\n",
-      "This wanted partedtheir plastic £30,000a-year water We her , in microcomputer give , John with (visit centre undisputed used popular Cross-Country slash four West manly to garage £1.5 their Greenpeace towards trauma , has year in .£5 high Towards by position withe message more always goes The elation higherYoungof second the parentship a stay bowling \n",
+      "This drink saying..\n",
       "\n",
       "UNK:\n",
-      "This a stopped quite \n"
+      "This Parliamentary in two in selection target\n"
      ]
     }
    ],
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -1177,13 +1177,13 @@
      "output_type": "stream",
      "text": [
       "Vanilla:\n",
-      "This would represent Hampshire Ratings coordinator Joan Andrews\n",
+      "This prompted it useless, Argentina.\n",
       "\n",
       "Laplace:\n",
-      "This was the brakes are declining rapidly, who had published today saying that New York became the Tories\n",
+      "This fine specimens on time — were supporting some anxious test whether he added: ‘We cannot doing that.’\n",
       "\n",
       "UNK:\n",
-      "This includes communal living near Ipswich's Cup for libel laws.\n"
+      "This evening as the lowest in trying to enhance good reason why some of Medstead Sports Village Hospital School came with Russia.\n"
      ]
     }
    ],
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -1238,13 +1238,25 @@
      "output_type": "stream",
      "text": [
       "Vanilla:\n",
-      "This summer its market leadership while falling short of blaming BR or the lack of success for fund-holders' own brands, ranging from bullying by classmates to schoolwork anxiety.\n",
+      "This year was geared to individual decisions about individual and personal therapy in East Suffolk for people to learn the facts.\n",
       "\n",
       "Laplace:\n",
-      "This always proves to be made in the area and encourage local people must be changed to four men and 14 for first quarter of new recordings issued recently; not surprisingly perhaps, ignored fellow Olympic bronze medalist Denis Stewart's decision to implement community care was distributed to customers, but it has taken her up in a freak holiday accident was undoubtedly the wiring errors in recent years.\n",
+      "This structure is typical of the row, Rovers were hard pressed Southern Region, where the main problem is worse than Mr Lawson does not begin to feel this is a more effective safeguards against the onward march of fascism — Croatian fascism first and their rows as any keeper I've come up with our kind of free capital flows than the current apathy among farmers towards tree planting proposals, their Palestinian counterparts will eventually emerge as the marines opened fire.\n",
       "\n",
-      "UNK:\n",
-      "This was blocked, Phil Whelan drove the amount owned to investors; while the proportion of female sperm whales trapped in debt\n"
+      "UNK:\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[261], line 49\u001b[0m\n\u001b[0;32m     47\u001b[0m generateSentenceTrigram(laplaceTrigramModel, \u001b[39m\"\u001b[39m\u001b[39mThis \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     48\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mUNK:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 49\u001b[0m generateSentenceTrigram(UNKTrigramModel, \u001b[39m\"\u001b[39;49m\u001b[39mThis \u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn[261], line 30\u001b[0m, in \u001b[0;36mgenerateSentenceTrigram\u001b[1;34m(trigramModel, word)\u001b[0m\n\u001b[0;32m     27\u001b[0m probs \u001b[39m=\u001b[39m [value \u001b[39m/\u001b[39m total \u001b[39mfor\u001b[39;00m _, value \u001b[39min\u001b[39;00m startsWithBigram]\n\u001b[0;32m     29\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m---> 30\u001b[0m     chosenNgram \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39;49mchoices(startsWithBigram, probs)[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m] \u001b[39m#pick according to probability\u001b[39;00m\n\u001b[0;32m     31\u001b[0m     \u001b[39mif\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39m<UNK>\u001b[39m\u001b[39m'\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m chosenNgram): \u001b[39m#to handle unk model\u001b[39;00m\n\u001b[0;32m     32\u001b[0m         \u001b[39mbreak\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\kelse\\anaconda3\\envs\\nlp\\lib\\random.py:500\u001b[0m, in \u001b[0;36mRandom.choices\u001b[1;34m(self, population, weights, cum_weights, k)\u001b[0m\n\u001b[0;32m    498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(cum_weights) \u001b[39m!=\u001b[39m n:\n\u001b[0;32m    499\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mThe number of weights does not match the population\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m--> 500\u001b[0m total \u001b[39m=\u001b[39m cum_weights[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m] \u001b[39m+\u001b[39m \u001b[39m0.0\u001b[39m   \u001b[39m# convert to float\u001b[39;00m\n\u001b[0;32m    501\u001b[0m \u001b[39mif\u001b[39;00m total \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0.0\u001b[39m:\n\u001b[0;32m    502\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mTotal of weights must be greater than zero\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
